# Metallic-Crow

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  vcpkg.json
doc/: Makefile  make.bat
doc/source/: conf.py  core.rst  designersapi.rst  developersapi.rst  index.rst  library.rst  schemas.rst
mcl/: actor.lua  joint.lua  load.lua  music.lua  sound.lua  speak.lua  stage.lua  timer.lua
res/: main.ini
res/common/: choice.json  collision.json  subtitle.json  world.json
res/config/: control.json  filesystem.json  game.json
res/lib/: actor.lua  joint.lua  metallic-crow.lua  music.lua  scenery.lua  screen.lua  set.lua  sound.lua  stage.lua  timer.lua
res/menu/start/: start.lua
res/saves/: saves.json
res/story/chapter0/: arena1.json  chapter0.lua  hero.json  music.json  sky.json
res/story/chapter1/: chapter1.lua
src/: main.cc
src/audio/: audio_thread.cc  audio_thread.h  chunk.cc  decoder.cc  ffmpeg_exception.h  frame.cc  graph.cc  mix_exception.cc  mix_exception.h  mix_library.cc  mix_library.h  mix_thread.cc  mix_thread.h  music.cc  music.h  sound.cc  sound.h
src/c/: cstd_exception.h  va_list.h
src/configuration/: config.cc  config.h  json.cc  json.h  json_iterator.cc  json_iterator.h  lua_command.cc  lua_command.h  lua_data.h  lua_exception.h  lua_guard.cc  lua_guard.h  lua_stack.cc  lua_stack.h  lua_stack_impl.h  parse.cc  parse.h  version.cc  version.h
src/controller/: controller.cc  controller.h  menu.cc  menu.h  player.cc  player.h  saves.cc  saves.h
src/display/: animation.cc  animation.h  bounding_box.cc  bounding_box.h  canvas.h  colour.cc  colour.h  flood_fill.h  font.cc  font.h  font_impl.h  img_exception.cc  img_exception.h  img_library.cc  img_library.h  modulation.cc  modulation.h  painter.cc  painter.h  rect.cc  rect.h  render.cc  render.h  sdl_exception.cc  sdl_exception.h  sdl_library.cc  sdl_library.h  sdl_texture.cc  sdl_texture.h  shape.h  surface.cc  surface.h  texture.cc  texture.h  ttf_exception.cc  ttf_exception.h  ttf_library.cc  ttf_library.h  window.cc  window.h  (+1 more)
src/dynamics/: body.cc  body.h  body_impl.h  body_impl_iterator.cc  body_impl_iterator.h  body_impl_pair.cc  body_impl_pair.h  box_search.cc  box_search.h  collision.cc  collision.h  collision_group.cc  collision_group.h  collision_type.h  command_collision.cc  command_collision.h  dynamics.cc  dynamics.h  dynamics_collision.cc  dynamics_collision.h  joint.cc  joint.h  light.cc  light.h  make_channel.cc  make_channel.h  ray_search.cc  ray_search.h  rules_collision.cc  rules_collision.h  units.cc  units.h  world.cc  world.h  world_impl.h
src/event/: bind.h  command.cc  command.h  event.cc  event.h  for_each.h  input.cc  input.h  queue.cc  queue.h  signal.cc  signal.h  switch.h  sync.cc  sync.h  timer.cc  timer.h  timeslice.cc  timeslice.h
src/exception/: exception.h  log.cc  log.h
src/function/: bind.h
src/game/: actor.cc  actor.h  actor_impl.h  animation.cc  animation.h  avatar.cc  avatar.h  box.cc  box.h  choice.cc  choice.h  fade.cc  fade.h  feature.cc  feature.h  game_animation.cc  game_animation.h  game_body.cc  game_body.h  game_joint.cc  game_joint.h  hero.cc  hero.h  hud.cc  hud.h  item.cc  item.h  json.cc  json.h  json_exception.h  json_iterator.cc  json_iterator.h  lua_library.cc  lua_library.h  lua_stack.cc  lua_stack.h  make_body.cc  make_body.h  menu.cc  menu.h  (+20 more)
src/memory/: weak_ptr.h
src/script/: script.cc  script.h  script_actor.cc  script_audio.cc  script_choice.cc  script_collision.cc  script_commands.cc  script_dialogue.cc  script_fade.cc  script_impl.h  script_joint.cc  script_prop.cc  script_resource.cc  script_scenery.cc  script_screen.cc  script_set.cc  script_stage.cc  script_subtitle.cc  script_terrain.cc  script_timer.cc  script_view.cc
src/time/: now.cc  now.h
